--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Инстраграмм">
   <meta name="author" content="Kazakov Denis">
-  <link rel="stylesheet" href="/pages/index.css">                         
+  <link rel="stylesheet" href="~/pages/index.css">                         
   <title>Mesto</title>
 </head>
 <body class="root">
