--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Инстраграмм">
   <meta name="author" content="Kazakov Denis">
-  <link rel="stylesheet" href="./pages/index.css">                         
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
 </head>
 <body class="root">
   <div class="page">
     <header class="header">
-      <img src="./images/logo.svg" alt="LOGO" class="header__logo">
+      <img src="./images/logo.svg" alt="Логотип" class="header__logo">
       <hr class="header__line">
     </header>
     <main class="content">
       <section class="profile">
-        <img src="./images/Profile_avatar.jpg" alt="Avatar" class="profile__avatar">
+        <img src="./images/Profile_avatar.jpg" alt="Аватар" class="profile__avatar">
         <div class="profile__info">
           <h1 class="profile__name">Жак Вондам</h1>
           <button class="profile__info-edit-button" type="button"></button>
