--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
     <!-- Попап редактирования prfile__info -->
-    <div id="editProfile" class="popup popup__close">
+    <div id="editProfile" class="popup popup_close">
       <form name="profile" class="popup__form" novalidate>
         <fieldset class="popup__field">
           <p class="popup__title">Редактировать профиль</p>
