--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
 </head>
+
 <body class="root">
   <div class="page">
     <header class="header">
@@ -93,12 +95,12 @@
         <fieldset class="popup__field">
           <p class="popup__title">Редактировать профиль</p>
           <label class="popup__form-field">
-            <input name="name" placeholder="Имя" required
-              maxlength="30" class="popup__input" id="popup__name-input" type="text" />
+            <input name="name" placeholder="Имя" required maxlength="30" class="popup__input" id="popup__name-input"
+              type="text" />
           </label>
           <label class="popup__form-field">
-            <input name="profession" placeholder="Профессия" required
-              maxlength="80" class="popup__input" id="popup__profession-input" type="text" />
+            <input name="profession" placeholder="Профессия" required maxlength="80" class="popup__input"
+              id="popup__profession-input" type="text" />
           </label>
           <button type="submit" class="popup__button">
             Сохранить
@@ -110,6 +112,7 @@
       </div>
     </div>
   </div>
-<script src="./scripts/app.js"></script>
+  <script src="./scripts/app.js"></script>
 </body>
+
 </html>
