--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <img src="./images/Photo/Karachevsk__photo.png" class="photo__list-img" alt="ФОТО">
               <figcaption class="photo__cap">
                 <p class="photo__cap-text">Карачевск</p>
-                <button class="photo__like"></button>
+                <button class="photo__like" type="button"></button>
               </figcaption>
             </figure>
           </li>
@@ -43,7 +43,7 @@
               <img src="./images/Photo/Dambai__photo.png" class="photo__list-img" alt="ФОТО">
               <figcaption class="photo__cap">
                 <p class="photo__cap-text">Домбай</p>
-                <button class="photo__like"></button>
+                <button class="photo__like" type="button"></button>
               </figcaption>
             </figure>
           </li>
@@ -52,7 +52,7 @@
               <img src="./images/Photo/Gora-Elbrus__photo.png" class="photo__list-img" alt="ФОТО">
               <figcaption class="photo__cap">
                 <p class="photo__cap-text">Гора Эльбрус</p>
-                <button class="photo__like"></button>
+                <button class="photo__like" type="button"></button>
               </figcaption>
             </figure>
           </li>
@@ -61,7 +61,7 @@
               <img src="./images/Photo/Karachevsk__photo.png" class="photo__list-img" alt="ФОТО">
               <figcaption class="photo__cap">
                 <p class="photo__cap-text">Карачаево-Черкесия</p>
-                <button class="photo__like"></button>
+                <button class="photo__like" type="button"></button>
               </figcaption>
             </figure>
           </li>
@@ -70,7 +70,7 @@
               <img src="./images/Photo/Dambai__photo.png" class="photo__list-img" alt="ФОТО">
               <figcaption class="photo__cap">
                 <p class="photo__cap-text">Домбай</p>
-                <button class="photo__like"></button>
+                <button class="photo__like" type="button"></button>
               </figcaption>
             </figure>
           </li>
@@ -79,7 +79,7 @@
               <img src="./images/Photo/Gora-Elbrus__photo.png" class="photo__list-img" alt="ФОТО">
               <figcaption class="photo__cap">
                 <p class="photo__cap-text">Гора Эльрус</p>
-                <button class="photo__like"></button>
+                <button class="photo__like" type="button"></button>
               </figcaption>
             </figure>
           </li>
