--- a/index.html
+++ b/index.html
@@ -15,71 +15,70 @@
   <div class="page">
     <header class="header">
       <img src="./images/logo.svg" alt="Логотип" class="header__logo">
-      <hr class="header__line">
     </header>
     <main class="content">
       <section class="profile">
         <img src="./images/Profile_avatar.jpg" alt="Аватар" class="profile__avatar">
         <div class="profile__info">
           <h1 class="profile__name">Жак Вондам</h1>
-          <button class="profile__info-edit-button" type="button"></button>
+          <button class="profile__info-edit-button" type="button" aria-label="Редактировать профиль"></button>
           <p class="profile__profession">Исследователь океана</p>
         </div>
-        <button class="profile__edit-button" type="button"></button>
+        <button class="profile__add-button" type="button" aria-label="Добавить картинку"></button>
       </section>
-      <section class="photo">
-        <ul class="photo__list">
-          <li class="photo__item">
-            <figure class="photo__list-item">
-              <img src="./images/Photo/Karachevsk__photo.png" class="photo__list-img" alt="ФОТО">
-              <figcaption class="photo__cap">
-                <p class="photo__cap-text">Карачевск</p>
-                <button class="photo__like" type="button"></button>
+      <section class="cards">
+        <ul class="cards__list">
+          <li class="cards__item">
+            <figure class="cards__list-item">
+              <img src="./images/cards/Karachevsk__cards.jpg" class="cards__list-img" alt="Карачаевск">
+              <figcaption class="cards__cap">
+                <p class="cards__cap-text">Карачаевск</p>
+                <button class="cards__like" type="button" aria-label="Поставить лайк"></button>
               </figcaption>
             </figure>
           </li>
-          <li class="photo__item">
-            <figure class="photo__list-item">
-              <img src="./images/Photo/Dambai__photo.png" class="photo__list-img" alt="ФОТО">
-              <figcaption class="photo__cap">
-                <p class="photo__cap-text">Домбай</p>
-                <button class="photo__like" type="button"></button>
+          <li class="cards__item">
+            <figure class="cards__list-item">
+              <img src="./images/cards/Dambai__cards.jpg" class="cards__list-img" alt="Дамбаи">
+              <figcaption class="cards__cap">
+                <p class="cards__cap-text">Домбай</p>
+                <button class="cards__like" type="button" aria-label="Поставить лайк"></button>
               </figcaption>
             </figure>
           </li>
-          <li class="photo__item">
-            <figure class="photo__list-item">
-              <img src="./images/Photo/Gora-Elbrus__photo.png" class="photo__list-img" alt="ФОТО">
-              <figcaption class="photo__cap">
-                <p class="photo__cap-text">Гора Эльбрус</p>
-                <button class="photo__like" type="button"></button>
+          <li class="cards__item">
+            <figure class="cards__list-item">
+              <img src="./images/cards/Gora-Elbrus__cards.jpg" class="cards__list-img" alt="Эльбрус">
+              <figcaption class="cards__cap">
+                <p class="cards__cap-text">Гора Эльбрус</p>
+                <button class="cards__like" type="button" aria-label="Поставить лайк"></button>
               </figcaption>
             </figure>
           </li>
-          <li class="photo__item">
-            <figure class="photo__list-item">
-              <img src="./images/Photo/Karachevsk__photo.png" class="photo__list-img" alt="ФОТО">
-              <figcaption class="photo__cap">
-                <p class="photo__cap-text">Карачаево-Черкесия</p>
-                <button class="photo__like" type="button"></button>
+          <li class="cards__item">
+            <figure class="cards__list-item">
+              <img src="./images/cards/Karachevsk__cards.jpg" class="cards__list-img" alt="Карачаевск">
+              <figcaption class="cards__cap">
+                <p class="cards__cap-text">Карачаево-Черкесия</p>
+                <button class="cards__like" type="button" aria-label="Поставить лайк"></button>
               </figcaption>
             </figure>
           </li>
-          <li class="photo__item">
-            <figure class="photo__list-item">
-              <img src="./images/Photo/Dambai__photo.png" class="photo__list-img" alt="ФОТО">
-              <figcaption class="photo__cap">
-                <p class="photo__cap-text">Домбай</p>
-                <button class="photo__like" type="button"></button>
+          <li class="cards__item">
+            <figure class="cards__list-item">
+              <img src="./images/cards/Dambai__cards.jpg" class="cards__list-img" alt="Дамбаи">
+              <figcaption class="cards__cap">
+                <p class="cards__cap-text">Домбай</p>
+                <button class="cards__like" type="button" aria-label="Поставить лайк"></button>
               </figcaption>
             </figure>
           </li>
-          <li class="photo__item">
-            <figure class="photo__list-item">
-              <img src="./images/Photo/Gora-Elbrus__photo.png" class="photo__list-img" alt="ФОТО">
-              <figcaption class="photo__cap">
-                <p class="photo__cap-text">Гора Эльрус</p>
-                <button class="photo__like" type="button"></button>
+          <li class="cards__item">
+            <figure class="cards__list-item">
+              <img src="./images/cards/kirill-pershin-1556355-unsplash.png" class="cards__list-img" alt="Эльбрус">
+              <figcaption class="cards__cap">
+                <p class="cards__cap-text">Гора Эльрус</p>
+                <button class="cards__like" type="button" aria-label="Поставить лайк"></button>
               </figcaption>
             </figure>
           </li>
@@ -92,7 +91,7 @@
     <!-- Попап редактирования prfile__info -->
     <div id="editProfile" class="popup popup_close">
       <div class="popup__container">
-        <form name="profile" class="popup__form" novalidate>
+        <form name="profile" class="popup__form">
           <fieldset class="popup__field">
             <p class="popup__title">Редактировать профиль</p>
             <label class="popup__form-field">
@@ -107,7 +106,7 @@
               Сохранить
             </button>
           </fieldset>
-          <button type="button" class="popup__button-close"></button>
+          <button type="button" class="popup__button-close" aria-label="Закрыть форму редактирования"></button>
         </form>
       </div>
     </div>
