--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </li>
           <li class="cards__item">
             <figure class="cards__list-item">
-              <img src="./images/cards/kirill-pershin-1556355-unsplash.png" class="cards__list-img" alt="Эльбрус">
+              <img src="./images/cards/Gora-Elbrus__cards.jpg" class="cards__list-img" alt="Эльбрус">
               <figcaption class="cards__cap">
                 <p class="cards__cap-text">Гора Эльрус</p>
                 <button class="cards__like" type="button" aria-label="Поставить лайк"></button>
