--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
               Сохранить
             </button>
           </fieldset>
-          <button type="sumbit" class="popup__button-close" aria-label="Закрыть форму редактирования"></button>
+          <button type="button" class="popup__button-close" aria-label="Закрыть форму редактирования"></button>
+          <!-- Если поставить тут тип кнопки sumbit при закрытии формы на крестик будут сохранятся данные-->
         </form>
       </div>
     </div>
