--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <img src="./images/cards/Dambai__cards.jpg" class="card__list-img" alt="Дамбаи">
             <div class="card__info">
               <h2 class="card__title">Домбай</h2>
-              <button class="cards__like-button" type="button" aria-label="Поставить лайк"></button>
+              <button class="card__like-button" type="button" aria-label="Поставить лайк"></button>
             </div>
           </li>
-          <li class="card__item">
+          <li class="card">
             <img src="./images/cards/Gora-Elbrus__cards.jpg" class="card__list-img" alt="Эльбрус">
             <div class="card__info">
               <h2 class="card__title">Гора Эльрус</h2>
