--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
     </div>
     <!--Попап добавления новой карточки card-->
     <div class="popup popup_add_card">
-      <div class="popup__container ">
+      <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
         <form name="profile" class="popup__form">
           <fieldset class="popup__field">
             <label class="popup__form-field">
-              <input name="card-name" placeholder="Название" required maxlength="30" class="popup__input popup__input_data_card-name"
-                type="text" />
+              <input name="card-name" placeholder="Название" required maxlength="30"
+                class="popup__input popup__input_data_card-name" type="text" />
             </label>
             <label class="popup__form-field">
               <input name="card-link" placeholder="Ссылка на картинку" required maxlength="200"
@@ -75,22 +75,33 @@
             </button>
           </fieldset>
         </form>
-        <button type="button" class="popup__button-close" aria-label="Закрыть форму редактирования"></button>
+        <button type="button" class="popup__button-close" aria-label="Закрыть форму добавления"></button>
       </div>
     </div>
   </div>
+  <!-- Попап открытой фотографии -->
+  <div class="popup popup_open_img">
+    <div class="popup__fullScreen">
+      <figure class="popup__image-figure">
+        <img class="popup__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/ivanovo.jpg"
+          alt="Фото в попапе из карточки" />
+        <figcaption class="popup__image-subtitle">dsadasdasdasdasdasdasdasdadadadddadaddaasdaddada</figcaption>
+      </figure>
+      <button type="button" class="popup__button-close" aria-label="Закрыть фотографию"></button>
+    </div>
+  </div>
+  <!--Template card-->
   <template class="card_template">
     <li class="card">
-      <img src="" class="card__list-img" alt="Эльбрус">
+      <img src="" class="card__list-img">
       <div class="card__info">
         <h2 class="card__title"></h2>
         <button type="button" title="Удалить карточку" class="card__delete-button"></button>
-        <button class="card__like-button" type="button" aria-label="Поставить лайк"></button>
+        <button type="button" class="card__like-button" type="button" aria-label="Поставить лайк"></button>
       </div>
     </li>
   </template>
   <script src="./scripts/app1.js"></script>
-  <script src="./scripts/app2.js"></script>
 
 
 </body>
