--- a/index.html
+++ b/index.html
@@ -97,13 +97,11 @@
       <div class="card__info">
         <h2 class="card__title"></h2>
         <button type="button" title="Удалить карточку" class="card__delete-button"></button>
-        <button type="button" class="card__like-button" type="button" aria-label="Поставить лайк"></button>
+        <button type="button" class="card__like-button" aria-label="Поставить лайк"></button>
       </div>
     </li>
   </template>
   <script src="./scripts/app1.js"></script>
-
-
 </body>
 
 </html>
