--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
   <div class="popup popup_open_img">
     <div class="popup__fullScreen">
       <figure class="popup__image-figure">
-        <img class="popup__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/ivanovo.jpg"
-          alt="Фото в попапе из карточки" />
-        <figcaption class="popup__image-subtitle">dsadasdasdasdasdasdasdasdadadadddadaddaasdaddada</figcaption>
+        <img class="popup__image"
+          alt="Фото в попапе из карточки"/>
+        <figcaption class="popup__image-subtitle"></figcaption>
       </figure>
       <button type="button" class="popup__button-close" aria-label="Закрыть фотографию"></button>
     </div>
@@ -93,7 +93,7 @@
   <!--Template card-->
   <template class="card_template">
     <li class="card">
-      <img src="" class="card__list-img">
+      <img class="card__list-img">
       <div class="card__info">
         <h2 class="card__title"></h2>
         <button type="button" title="Удалить карточку" class="card__delete-button"></button>
