--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
       </div>
     </li>
   </template>
-  <script src="./scripts/app1.js"></script>
+  <script src="./scripts/app.js"></script>
+  <script src="./scripts/validate.js"></script>
 </body>
 
 </html>
