--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             <label class="popup__form-field">
               <input name="name" id="name-input" placeholder="Имя" required minlength="2" maxlength="40"
                 class="popup__input popup__input_data_name" type="text" />
-              <span class="form__input-error name-input-error"></span>
+              <span class="popup__input-error name-input-error"></span>
             </label>
             <label class="popup__form-field">
-              <input name="profession" id="profession-input" placeholder="Профессия" required minlength="2" maxlength="200"
-                class="popup__input popup__input_data_profession" type="text" />
-              <span class="form__input-error profession-input-error"></span>
+              <input name="profession" id="profession-input" placeholder="Профессия" required minlength="2"
+                maxlength="200" class="popup__input popup__input_data_profession" type="text" />
+              <span class="popup__input-error profession-input-error"></span>
             </label>
-            <button type="submit" class="popup__button-save">
+            <button type="submit" class="popup__button popup__button-save">
               Сохранить
             </button>
           </fieldset>
@@ -67,14 +67,14 @@
             <label class="popup__form-field">
               <input name="card-name" id="card-name-input" placeholder="Название" required minlength="2" maxlength="30"
                 class="popup__input popup__input_data_card-name" type="text" />
-              <span class="form__input-error card-name-input-error"></span>
+              <span class="popup__input-error card-name-input-error"></span>
             </label>
             <label class="popup__form-field">
               <input name="card-link" id="card-link-input" placeholder="Ссылка на картинку" required maxlength="200"
                 class="popup__input popup__input_data_card-link" type="url" />
-              <span class="form__input-error card-link-input-error"></span>
+              <span class="popup__input-error card-link-input-error"></span>
             </label>
-            <button type="submit" class="popup__button-save">
+            <button type="submit" class="popup__button popup__button-save">
               Создать
             </button>
           </fieldset>
