--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 maxlength="200" class="popup__input popup__input_data_profession" type="text" />
               <span class="popup__input-error profession-input-error"></span>
             </label>
-            <button type="submit" class="popup__button popup__button-save">
+            <button type="submit" class="popup__button  popup__button-save" disabled>
               Сохранить
             </button>
           </fieldset>
@@ -74,7 +74,7 @@
                 class="popup__input popup__input_data_card-link" type="url" />
               <span class="popup__input-error card-link-input-error"></span>
             </label>
-            <button type="submit" class="popup__button popup__button-save">
+            <button type="submit" class="popup__button popup__button-save" disabled>
               Создать
             </button>
           </fieldset>
