--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="profile">
         <img src="./images/Profile_avatar.jpg" alt="Аватар" class="profile__avatar">
         <div class="profile__info">
-          <h1 class="profile__name">Жак Вондам</h1>
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__info-edit-button" type="button" aria-label="Редактировать профиль"></button>
           <p class="profile__profession">Исследователь океана</p>
         </div>
