--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
   </template>
   <script src="./scripts/app.js"></script>
   <script src="./scripts/validate.js"></script>
+  <script src="./scripts/card.js"></script>
 </body>
 
 </html>
