--- a/index.html
+++ b/index.html
@@ -104,9 +104,12 @@
       </div>
     </li>
   </template>
+  <script src="./scripts/constants.js"></script>
+  <script src="./scripts/utils.js"></script>
   <script src="./scripts/app.js"></script>
   <script src="./scripts/validate.js"></script>
   <script src="./scripts/card.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
