--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
   <script src="./scripts/app.js"></script>
   <script src="./scripts/validate.js"></script>
   <script src="./scripts/card.js"></script>
+  <script src="./scripts/validate1.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 
