--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="popup popup_edit_profile-info">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="profile-form" class="popup__form" novalidate>
+        <form name="profileForm" class="popup__form" novalidate>
           <fieldset class="popup__field">
             <label class="popup__form-field">
               <input name="name" id="name-input" placeholder="Имя" required minlength="2" maxlength="40"
@@ -62,7 +62,7 @@
     <div class="popup popup_add_card">
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
-        <form name="card-form" class="popup__form" novalidate>
+        <form name="cardForm" class="popup__form" novalidate>
           <fieldset class="popup__field">
             <label class="popup__form-field">
               <input name="card-name" id="card-name-input" placeholder="Название" required minlength="2" maxlength="30"
