--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
       </div>
     </li>
   </template>
+  <script type="module" src="./scripts/PopupWithImage.js"></script>
+  <script type="module" src="./scripts/UserInfo.js"></script>
+  <script type="module" src="./scripts/PopupWithForm.js"></script>
   <script type="module" src="./scripts/index.js"></script>
 </body>
 
