--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       </div>
     </li>
   </template>
+  <script type="module" src="./scripts/Section.js"></script>
   <script type="module" src="./scripts/PopupWithImage.js"></script>
   <script type="module" src="./scripts/UserInfo.js"></script>
   <script type="module" src="./scripts/PopupWithForm.js"></script>
