--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Инстраграмм">
   <meta name="author" content="Kazakov Denis">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
 </head>
 
 <body class="root">
   <div class="page">
     <header class="header">
-      <img src="./images/logo.svg" alt="Логотип" class="header__logo">
+      <img src="<%=require('./images/logo.svg')%>" alt="Логотип" class="header__logo">
     </header>
     <main class="content">
       <section class="profile">
-        <img src="./images/Profile_avatar.jpg" alt="Аватар" class="profile__avatar">
+        <img src="<%=require('./images/Profile_avatar.jpg')%>" alt="Аватар" class="profile__avatar">
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__info-edit-button" type="button" aria-label="Редактировать профиль"></button>
@@ -104,7 +103,6 @@
       </div>
     </li>
   </template>
-  <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
