--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,22 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Инстраграмм">
-  <meta name="author" content="Kazakov Denis">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="description" content="Инстраграмм" />
+  <meta name="author" content="Kazakov Denis" />
   <title>Mesto</title>
 </head>
 
 <body class="root">
   <div class="page">
     <header class="header">
-      <img src="<%=require('./images/logo.svg')%>" alt="Логотип" class="header__logo">
+      <img src="<%=require('./images/logo.svg')%>" alt="Логотип" class="header__logo" />
     </header>
     <main class="content">
       <section class="profile">
-        <img src="<%=require('./images/Profile_avatar.jpg')%>" alt="Аватар" class="profile__avatar">
+        <img src="<%=require('./images/Profile_avatar.jpg')%>" alt="Аватар" class="profile__avatar" />
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__info-edit-button" type="button" aria-label="Редактировать профиль"></button>
@@ -26,8 +26,7 @@
         <button class="profile__add-button" type="button" aria-label="Добавить картинку"></button>
       </section>
       <section class="cards">
-        <ul class="cards__list">
-        </ul>
+        <ul class="cards__list"></ul>
       </section>
     </main>
     <footer class="footer">
@@ -49,7 +48,7 @@
                 maxlength="200" class="popup__input popup__input_data_profession" type="text" />
               <span class="popup__input-error profession-input-error"></span>
             </label>
-            <button type="submit" class="popup__button  popup__button-save" disabled>
+            <button type="submit" class="popup__button popup__button-save" disabled>
               Сохранить
             </button>
           </fieldset>
@@ -92,10 +91,20 @@
       <button type="button" class="popup__button-close" aria-label="Закрыть фотографию"></button>
     </div>
   </div>
+  <!-- Попап с подверждением удаления карточки -->
+  <div class="popup popup_confrim">
+    <div class="popup__container">
+      <h2 class="popup__title">Вы уверены?</h2>
+      <form name="delete-form" action="#" class="popup__form form" novalidate>
+        <button type="submit" class="popup__button popup__button-save popup__button-confrim">Да</button>
+      </form>
+      <button type="button" class="popup__button-close" aria-label="Закрыть фотографию"></button>
+    </div>
+  </div>
   <!--Template card-->
   <template class="card_template">
     <li class="card">
-      <img class="card__list-img">
+      <img class="card__list-img" />
       <div class="card__info">
         <h2 class="card__title"></h2>
         <button type="button" title="Удалить карточку" class="card__delete-button"></button>
