--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,25 @@
       </div>
     </div>
   </div>
+  <!-- Попап редактирования аватара -->
+  <div class="popup popup_edit_avatar">
+    <div class="popup__container">
+      <h2 class="popup__title">Обновить аватар</h2>
+      <form name="profileFormAvatar" class="popup__form" novalidate>
+        <fieldset class="popup__field">
+          <label class="popup__form-field">
+            <input name="avatarLink" id="avatar-link-input" placeholder="Ссылка на картинку" required maxlength="200"
+              class="popup__input popup__input_data_card-link" type="url" />
+            <span class="popup__input-error avatar-link-input-error"></span>
+          </label>
+          <button type="submit" class="popup__button popup__button-save" disabled>
+            Сохранить
+          </button>
+        </fieldset>
+      </form>
+      <button type="button" class="popup__button-close" aria-label="Закрыть форму редактирования"></button>
+    </div>
+  </div>
   <!-- Попап открытой фотографии -->
   <div class="popup popup_open_img">
     <div class="popup__fullScreen">
