--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,14 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img src="<%=require('./images/Profile_avatar.jpg')%>" alt="Аватар" class="profile__avatar" />
+        <div class="profile__avatar-box">
+          <img src="<%=require('./images/avatar.png')%>" alt="Аватар" class="profile__avatar" />
+          <button class="profile__avatar-edit-button" aria-label="Загрузить новый аватар"></button>
+        </div>
         <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <h1 class="profile__name">Имя</h1>
           <button class="profile__info-edit-button" type="button" aria-label="Редактировать профиль"></button>
-          <p class="profile__profession">Исследователь океана</p>
+          <p class="profile__profession">Немного о себе</p>
         </div>
         <button class="profile__add-button" type="button" aria-label="Добавить картинку"></button>
       </section>
@@ -127,7 +130,11 @@
       <div class="card__info">
         <h2 class="card__title"></h2>
         <button type="button" title="Удалить карточку" class="card__delete-button"></button>
-        <button type="button" class="card__like-button" aria-label="Поставить лайк"></button>
+        <div class="card__box">
+          <button type="button" class="card__like-button" aria-label="Поставить лайк"></button>
+          <span class="card__like-counter">0</span>
+        </div>
+
       </div>
     </li>
   </template>
