--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
         <button type="button" title="Удалить карточку" class="card__delete-button"></button>
         <div class="card__box">
           <button type="button" class="card__like-button" aria-label="Поставить лайк"></button>
-          <span class="card__like-counter">0</span>
+          <span class="card__like-counter"></span>
         </div>
 
       </div>
